--- a/CustomerRelationsManagement.Web/appsettings.json
+++ b/CustomerRelationsManagement.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-CustomerRelationsManagement.Web-fdaa21c4-ca81-49bf-bcc6-13a463cf9fd2;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-CustomerRelationsManagement.Web-fdaa21c4-ca81-49bf-bcc6-13a463cf9fd2;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
